Revert "Merge branch '2.14.x' of https://github.com/geoserver/geoserver"
This reverts commit 73e2ae9538865160aba6719af80b7e93c9ec8a97, reversing
changes made to 46360323936355249544906318279ef551c5a7d5.